# hatch-api

./: .env.sample  .gitignore  Cargo.toml  README.md  Rocket.toml  config.go  db.go  deploy.sh  err.go  go.mod  go.sum  main.go  users.go
.github/workflows/: rust.yml
api/: bans.go  config.go  db.go  errors.go  password.go  projects.go  response_structs.go  router.go  s3.go  uploads.go  uploads_object.go  uploads_pfp.go  users.go
deploy/: README.md  run.sh  run_this.py
h/.minio.sys/: format.json
internal/: deploy.py
pkg/: bans.go  router.go
pkg/api/: admin.go  auth.go  middleware.go  notifications.go  projects.go  router.go  uploads.go  users.go
pkg/comments/: comments.go
pkg/db/: config.go  db.go  file.go  response_structs.go  s3.go
pkg/emails/: emails.go  verify.go
pkg/models/: auth.go  models.go
pkg/projects/: admin.go  projects.go
pkg/uploads/: download.go  image.go  object.go  pfp.go  project.go  scrassets.go  uploads.go  uploads_pfp.go
pkg/users/: admin.go  auth.go  deletion.go  follow.go  user.go  users.go
pkg/util/: config.go  errors.go  password.go  request.go  user.go  webhook.go
project/: project.json
src/: admin_guard.rs  assets.rs  ban_guard.rs  config.rs  data.rs  db.rs  entropy.rs  ip_guard.rs  limit_guard.rs  main.rs  structs.rs  token_guard.rs  token_header.rs  types.rs  verify_guard.rs
src/db/: instances.rs  mod.rs  wrapper.rs
src/guards/: admin_guard.rs  ban_guard.rs  ip_guard.rs  limit_guard.rs  mod.rs  token_guard.rs  verify_guard.rs
src/queues/: audit_queue.rs  mod.rs  report_queue.rs
src/routes/: admin.rs  (+8 more)
(+6 files in other folders)
