[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.133"
chrono = "0.4.38"
rocket = { version = "0.5.1", features = ["json"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
minreq = { version = "2.13.0", features = ["https"] }
minio = { git = "https://github.com/minio/minio-rs" }
rand = "0.8.5"
hex = "0.4.3"
tokio = "1.42.0"
bcrypt = "0.16.0"
serde = "1.0.215"
image = "0.25.5"
rocket_cors = "0.6.0"
url = "2.5.4"
webhook = "2.1.2"
dotenv = "0.15.0"
zip = "2.2.2"
rustrict = "0.7.33"
rocket-governor = "0.2.0-rc.3"
email_address = "0.2.9"
redis = { version = "0.29.1", features = ["tokio-comp"] }
async_once = "0.2.6"
